--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^16.3.2",
+    "@types/react": "^17.0.14",
+    "@types/react-dom": "^17.0.9",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "4.0.0"
+    "react-scripts": "4.0.0",
+    "typescript": "^4.3.5"
   },
   "scripts": {
     "start": "craco start",
@@ -35,6 +40,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router": "^5.1.16",
+    "@types/react-router-dom": "^5.1.8",
     "autoprefixer": "^9.8.6",
     "postcss": "8.2.10",
     "postcss-cli": "^7.1.1",
