--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "tacos_el_rojo",
   "version": "0.1.0",
   "private": true,
+   "main": "src/index.tsx",
   "dependencies": {
     "@craco/craco": "^6.1.2",
     "@testing-library/jest-dom": "^4.2.4",
@@ -15,7 +16,7 @@
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "4.0.0",
+    "react-scripts": "4.0.1",
     "typescript": "^4.3.5"
   },
   "scripts": {
