Added azure mssql
Added azure mssql database and updated the dishes model. Changed Id to int from GUID and is handled by database instead. Added migrations for database.

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MyDbConnection": "Server=localhost;Database=tacoselrojo;Trusted_Connection=True"
+  }
 }
