--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "tacos_el_rojo",
   "version": "0.1.0",
   "private": true,
-   "main": "src/index.tsx",
+  "main": "src/index.tsx",
   "dependencies": {
     "@craco/craco": "^6.1.2",
     "@testing-library/jest-dom": "^4.2.4",
@@ -12,6 +12,7 @@
     "@types/node": "^16.3.2",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
+    "moment": "^2.29.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
